# MicroBros

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
Docs/: Architecture.md  DevelopmentEnvironment.md  Doxyfile.in  Hardware.md  Namespaces.h  Software.md
Source/: CMakeLists.txt
Source/Core/: CMakeLists.txt
Source/Core/include/: Bitflags.h  Maze.h  Mouse.h
Source/Core/include/Core/: Algorithm.h  Bitflags.h  Comm.h  Inline.h  Log.h  Maze.h  Mouse.h
Source/Core/src/: Algorithm.cpp  Log.cpp  Maze.cpp  Mouse.cpp
Source/Core/src/Algorithms/: FloodFill.cpp  FloodFill.h  WallFollower.cpp  WallFollower2.cpp
Source/Firmware/: CMakeLists.txt  toolchain.cmake
Source/Firmware/PLATFORM.IO/MicroBros Firmware/: platformio.ini
Source/Firmware/examples/: L298N_test.py
Source/Firmware/src/: Filters.cpp  Filters.h  Mouse.cpp  Mouse.h  Mouse2.cpp  Mouse2.h  PID.cpp  PID.h  Timer.cpp  Timer.h  Utils.h  main.cpp
Source/Firmware/src/BLE/: ControllerService.cpp  ControllerService.h  MotorService.cpp  MotorService.h  MouseService.cpp  MouseService.h
Source/Firmware/src/Drivers/: DFR0548.cpp  DFR0548.h  HCSR04.cpp  HCSR04.h  IR.cpp  IR.h
Source/Simulator/: CMakeLists.txt
Source/Simulator/src/: Application.cpp  Application.h  BLE.cpp  BLE.h  Main.cpp  SimulatorMaze.cpp  SimulatorMaze.h  SimulatorMouse.h  Utils.cpp  Utils.h  Window.cpp  Window.h
Source/Simulator/src/Services/: BLE.cpp  BLE.h  MainWindow.cpp  MainWindow.h  RemoteMouses.cpp  RemoteMouses.h  Service.h  Simulation.cpp  Simulation.h
Source/Simulator/src/Windows/: Controls.cpp  Maze.cpp  RemoteConnections.cpp  RemoteMotors.cpp  Window.cpp  Window.h
